--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "libs/FreeRTOS"]
 	path = libs/FreeRTOS
 	url = https://github.com/FreeRTOS/FreeRTOS.git
+[submodule "libs/mplab_event_recorder"]
+	path = libs/mplab_event_recorder
+	url = https://github.com/Microchip-MPLAB-Harmony/mplab_event_recorder.git
+[submodule "libs/docker-wine"]
+	path = libs/docker-wine
+	url = https://github.com/scottyhardy/docker-wine.git
