--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-SAM_URL="ghcr.io/reggiemarr/fprime-atmel-sam-reference"
-WDIR="/freeSAM"
+WDIR="/fprime-atmel-sam-reference"
+SAM_URL="ghcr.io/reggiemarr/$WDIR"
