Add support for initial base build

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-WDIR="/fprime-atmel-sam-reference"
-SAM_URL="ghcr.io/reggiemarr$WDIR"
+# NOTE directory paths are for within the related container
+SAM_WDIR="/fprime-atmel-sam-reference"
+SAM_BASE_DIR="$SAM_WDIR/Base"
+SAM_URL="ghcr.io/reggiemarr$SAM_WDIR"
 SAM_IMG=${SAM_URL}:default
