--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,93 @@
-*dist
+upgrade_diff.patch
+build_cache*
+dev_deps
+build/
+build*/
+gtest/
+compile_commands.json
+AutoXML/
+test_harness/src/test_harness-C/application.out
+/.project
+/.cproject
+*.pyc
+*.o
+*Ac.*
+*ComponentReport.txt
+lib*.a
+*-bin
+ac_dep
+*~
+.metadata
+RemoteSystemsTempFiles
+*.py.bak
+~*
+*.hash
+.DS_Store
+*.stackdump
+Dict
+*.core
+
+*.gcov
+!**/test/ut/output/*.gcov
+GTestBase.*
+TesterBase.*
+Tester.*
+!**/test/ut/GTestBase.*
+!**/test/ut/TesterBase.*
+!**/test/ut/Tester.*
+
+*.sconsign.dblite
+*.class
+.classpath
+doxygen
+.scrub*
+.coverity*
+coverity.out
+#*#
+.#*
+
+**/docs/*.html
+*-template
+
+logs
+
+test_harness/.autotools
+core
+
+*.swp4
+
+./Gds/logs/*
+./Gds/docs/doxy
+
+*AppDictionary.xml
+*TopologyAppID.csv
+*TopologyAppAi_IDTableLog.txt
+
+# .vscode
+py_dict
+.settings
+build-fprime-automatic*
+
+/Ref/bin
+/RPI/bin
+/ci-venv/
+/ci-logs*
+TesterBase.*
+GTestBase.*
+/Fw/Python/.eggs
+/Fw/Python/src/fprime.egg-info
+/Gds/src/fprime_gds.egg-info
+**/DefaultDict/serializable/*
+
+fprime-venv
+xml
+depend
+
+/.idea/
+/venv/
+
+# FlightComputer/build-fprime-automatic-native/*
+FlightComputer/build-fprime-automatic-native-ut/*
+# FlightComputer/build-artifacts/*
+**/coverage/
+coverage/
