TEMP add repos from baremetal reference
While we likely don't want to make atmel builds dependent on arduino
framework support much of what is implemented is at least partially transferable

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,12 @@
 [submodule "deps/fprime"]
 	path = deps/fprime
 	url = https://github.com/nasa/fprime.git
+[submodule "deps/fprime-freeRTOS"]
+	path = deps/fprime-freeRTOS
+	url = https://github.com/ReggieMarr/fprime-freeRTOS.git
+[submodule "deps/fprime-arduino"]
+	path = deps/fprime-arduino
+	url = https://github.com/fprime-community/fprime-arduino.git
+[submodule "deps/fprime-baremetal"]
+	path = deps/fprime-baremetal
+	url = https://github.com/fprime-community/fprime-baremetal.git
