Adding fprime support

--- a/.env
+++ b/.env
@@ -3,3 +3,7 @@ SAM_WDIR="/fprime-atmel-sam-reference"
 SAM_BASE_DIR="$SAM_WDIR/Base"
 SAM_URL="ghcr.io/reggiemarr$SAM_WDIR"
 SAM_IMG=${SAM_URL}:default
+
+FPRIME_ROOT="${SAM_WDIR}/deps/fprime"
+FPRIME_PROJECT_ROOT=$FPRIME_ROOT
+DEPLOYMENT_ROOT=$SAM_BASE_DIR
