--- a/fprime-atmel/cmake/toolchain/support/sources/samv71q21b/cmsis/blinky.csolution.yml
+++ b/fprime-atmel/cmake/toolchain/support/sources/samv71q21b/cmsis/blinky.csolution.yml
@@ -1,13 +1,27 @@
 solution:
-  created-for: cmsis-toolbox@2.6
+  created-for: cmsis-toolbox@2.6.0
   description: LED blinking application for the SAMV71 Xplained board.
   cdefault:                       # use default setup of toolchain specific controls.
   compiler: GCC
+
   packs:
     - pack: ARM::CMSIS@5.8.0                     # CMSIS Core pack
     - pack: Microchip::SAMV71_DFP@4.10.230       # Device Family Pack for SAMV71
+
+  build-types:                                 # defines toolchain options for 'debug' and 'release'
+    - type: Debug
+      debug: on
+      optimize: debug
+
+    # - type: Release
+    #   debug: off
+    #   optimize: balanced
+
   target-types:
-    - type: Board
-      board: ATSAMV71-XULT                       # Specify the SAMV71 Xplained Ultra board
+    - type: SamV71-Xplained-Board
+      device: Microchip::ATSAMV71Q21B       # Specify the SAMV71Q21B Device
+    # - type: SamV71-Xplained-Board
+    #   board: Microchip::ATSAMV71-XULT     # Specify the SAMV71 Xplained Ultra board
+
   projects:
     - project: './blinky.cproject.yml'             # Reference to your project file
