--- a/fprime-cmsis/cmake/toolchain/support/sources/samv71q21b/cmsis/blinky.Debug+SamV71-Xplained-Board.cbuild.yml
+++ b/fprime-cmsis/cmake/toolchain/support/sources/samv71q21b/cmsis/blinky.Debug+SamV71-Xplained-Board.cbuild.yml
@@ -5,6 +5,21 @@ build:
   context: blinky.Debug+SamV71-Xplained-Board
   compiler: GCC
   device: Microchip::ATSAMV71Q21B
+  device-pack: Microchip::SAMV71_DFP@4.10.230
+  device-books:
+    - name: https://www.microchip.com/wwwproducts/Devices.aspx?product=ATSAMV71Q21B
+      title: Device page for ATSAMV71Q21B
+    - name: https://www.microchip.com/wwwproducts/productds/ATSAMV71Q21B
+      title: Datasheet
+  processor:
+    endian: little
+    fpu: dp
+    core: Cortex-M7
+  packs:
+    - pack: ARM::CMSIS@5.9.0
+      path: ${CMSIS_PACK_ROOT}/ARM/CMSIS/5.9.0
+    - pack: Microchip::SAMV71_DFP@4.10.230
+      path: ${CMSIS_PACK_ROOT}/Microchip/SAMV71_DFP/4.10.230
   optimize: debug
   debug: on
   misc:
@@ -38,6 +53,19 @@ build:
       - -Wall
   define:
     - __DEBUG
+    - _RTE_
+    - __SAMV71Q21B__
+  define-asm:
+    - _RTE_
+    - __SAMV71Q21B__
+  add-path:
+    - RTE/_Debug_SamV71-Xplained-Board
+    - ${CMSIS_PACK_ROOT}/ARM/CMSIS/5.9.0/CMSIS/Core/Include
+    - ${CMSIS_PACK_ROOT}/Microchip/SAMV71_DFP/4.10.230/samv71b/include
+  add-path-asm:
+    - RTE/_Debug_SamV71-Xplained-Board
+    - ${CMSIS_PACK_ROOT}/ARM/CMSIS/5.9.0/CMSIS/Core/Include
+    - ${CMSIS_PACK_ROOT}/Microchip/SAMV71_DFP/4.10.230/samv71b/include
   output-dirs:
     intdir: tmp
     outdir: out/blinky/SamV71-Xplained-Board/Debug
@@ -45,3 +73,48 @@ build:
   output:
     - type: elf
       file: blinky.elf
+  components:
+    - component: ARM::CMSIS:CORE@5.6.0
+      condition: ARMv6_7_8-M Device
+      from-pack: ARM::CMSIS@5.9.0
+      selected-by: CMSIS:CORE
+      files:
+        - file: ${CMSIS_PACK_ROOT}/ARM/CMSIS/5.9.0/CMSIS/Core/Include
+          category: include
+          version: 5.6.0
+        - file: ${CMSIS_PACK_ROOT}/ARM/CMSIS/5.9.0/CMSIS/Core/Include/tz_context.h
+          category: header
+          version: 5.6.0
+        - file: ${CMSIS_PACK_ROOT}/ARM/CMSIS/5.9.0/CMSIS/Core/Template/ARMv8-M/main_s.c
+          category: sourceC
+          attr: template
+          version: 1.1.1
+          select: Secure mode 'main' module for ARMv8-M
+        - file: ${CMSIS_PACK_ROOT}/ARM/CMSIS/5.9.0/CMSIS/Core/Template/ARMv8-M/tz_context.c
+          category: sourceC
+          attr: template
+          version: 1.1.1
+          select: RTOS Context Management (TrustZone for ARMv8-M)
+        - file: ${CMSIS_PACK_ROOT}/ARM/CMSIS/5.9.0/CMSIS/Documentation/Core/html/index.html
+          category: doc
+          version: 5.6.0
+  linker:
+    script: RTE/Device/ATSAMV71Q21B/gcc_linker_script.ld.src
+    regions: RTE/Device/ATSAMV71Q21B/regions_ATSAMV71Q21B.h
+  groups:
+    - group: Source Files
+      files:
+        - file: src/main.c
+          category: sourceC
+  constructed-files:
+    - file: RTE/_Debug_SamV71-Xplained-Board/RTE_Components.h
+      category: header
+  licenses:
+    - license: <unknown>
+      packs:
+        - pack: ARM::CMSIS@5.9.0
+      components:
+        - component: ARM::CMSIS:CORE@5.6.0
+    - license: <unknown>
+      packs:
+        - pack: Microchip::SAMV71_DFP@4.10.230
