--- a/fprime-cmsis/cmake/toolchain/support/sources/samv71q21b/cmsis/blinky.cproject.yml
+++ b/fprime-cmsis/cmake/toolchain/support/sources/samv71q21b/cmsis/blinky.cproject.yml
@@ -8,8 +8,8 @@ project:
       files:
         - file: src/main.c
   components:
-    - component: Device:Startup                  # Startup code component
+    # - component: Device:Startup                  # Startup code component
     - component: CMSIS:CORE                      # CMSIS Core component
   packs:
-    - pack: ARM::CMSIS@5.8.0
+    - pack: ARM::CMSIS@5.9.0
     - pack: Microchip::SAMV71_DFP@4.10.230
