--- a/fprime-cmsis/cmake/toolchain/support/sources/samv71q21b/blinky.Debug+SamV71-Xplained-Board.cbuild.yml
+++ b/fprime-cmsis/cmake/toolchain/support/sources/samv71q21b/blinky.Debug+SamV71-Xplained-Board.cbuild.yml
@@ -16,8 +16,10 @@ build:
     fpu: dp
     core: Cortex-M7
   packs:
-    - pack: ARM::CMSIS@5.9.0
-      path: ${CMSIS_PACK_ROOT}/ARM/CMSIS/5.9.0
+    - pack: ARM::CMSIS-FreeRTOS@11.1.0
+      path: ${CMSIS_PACK_ROOT}/ARM/CMSIS-FreeRTOS/11.1.0
+    - pack: ARM::CMSIS@6.1.0
+      path: ${CMSIS_PACK_ROOT}/ARM/CMSIS/6.1.0
     - pack: Microchip::SAMV71_DFP@4.10.230
       path: ${CMSIS_PACK_ROOT}/Microchip/SAMV71_DFP/4.10.230
   optimize: debug
@@ -59,12 +61,22 @@ build:
     - _RTE_
     - __SAMV71Q21B__
   add-path:
+    - RTE/RTOS
     - RTE/_Debug_SamV71-Xplained-Board
-    - ${CMSIS_PACK_ROOT}/ARM/CMSIS/5.9.0/CMSIS/Core/Include
+    - ${CMSIS_PACK_ROOT}/ARM/CMSIS-FreeRTOS/11.1.0/CMSIS/RTOS2/FreeRTOS/Include
+    - ${CMSIS_PACK_ROOT}/ARM/CMSIS-FreeRTOS/11.1.0/Source/include
+    - ${CMSIS_PACK_ROOT}/ARM/CMSIS-FreeRTOS/11.1.0/Source/portable/GCC/ARM_CM7/r0p1
+    - ${CMSIS_PACK_ROOT}/ARM/CMSIS/6.1.0/CMSIS/Core/Include
+    - ${CMSIS_PACK_ROOT}/ARM/CMSIS/6.1.0/CMSIS/RTOS2/Include
     - ${CMSIS_PACK_ROOT}/Microchip/SAMV71_DFP/4.10.230/samv71b/include
   add-path-asm:
+    - RTE/RTOS
     - RTE/_Debug_SamV71-Xplained-Board
-    - ${CMSIS_PACK_ROOT}/ARM/CMSIS/5.9.0/CMSIS/Core/Include
+    - ${CMSIS_PACK_ROOT}/ARM/CMSIS-FreeRTOS/11.1.0/CMSIS/RTOS2/FreeRTOS/Include
+    - ${CMSIS_PACK_ROOT}/ARM/CMSIS-FreeRTOS/11.1.0/Source/include
+    - ${CMSIS_PACK_ROOT}/ARM/CMSIS-FreeRTOS/11.1.0/Source/portable/GCC/ARM_CM7/r0p1
+    - ${CMSIS_PACK_ROOT}/ARM/CMSIS/6.1.0/CMSIS/Core/Include
+    - ${CMSIS_PACK_ROOT}/ARM/CMSIS/6.1.0/CMSIS/RTOS2/Include
     - ${CMSIS_PACK_ROOT}/Microchip/SAMV71_DFP/4.10.230/samv71b/include
   output-dirs:
     intdir: tmp
@@ -74,33 +86,213 @@ build:
     - type: elf
       file: blinky.elf
   components:
-    - component: ARM::CMSIS:CORE@5.6.0
+    - component: ARM::CMSIS:CORE@6.1.0
       condition: ARMv6_7_8-M Device
-      from-pack: ARM::CMSIS@5.9.0
+      from-pack: ARM::CMSIS@6.1.0
       selected-by: CMSIS:CORE
       files:
-        - file: ${CMSIS_PACK_ROOT}/ARM/CMSIS/5.9.0/CMSIS/Core/Include
+        - file: ${CMSIS_PACK_ROOT}/ARM/CMSIS/6.1.0/CMSIS/Core/Include
           category: include
-          version: 5.6.0
-        - file: ${CMSIS_PACK_ROOT}/ARM/CMSIS/5.9.0/CMSIS/Core/Include/tz_context.h
+          version: 6.1.0
+        - file: ${CMSIS_PACK_ROOT}/ARM/CMSIS/6.1.0/CMSIS/Core/Include/tz_context.h
           category: header
-          version: 5.6.0
-        - file: ${CMSIS_PACK_ROOT}/ARM/CMSIS/5.9.0/CMSIS/Core/Template/ARMv8-M/main_s.c
+          version: 6.1.0
+        - file: ${CMSIS_PACK_ROOT}/ARM/CMSIS/6.1.0/CMSIS/Core/Template/ARMv8-M/main_s.c
           category: sourceC
           attr: template
           version: 1.1.1
           select: Secure mode 'main' module for ARMv8-M
-        - file: ${CMSIS_PACK_ROOT}/ARM/CMSIS/5.9.0/CMSIS/Core/Template/ARMv8-M/tz_context.c
+        - file: ${CMSIS_PACK_ROOT}/ARM/CMSIS/6.1.0/CMSIS/Core/Template/ARMv8-M/tz_context.c
           category: sourceC
           attr: template
           version: 1.1.1
           select: RTOS Context Management (TrustZone for ARMv8-M)
-        - file: ${CMSIS_PACK_ROOT}/ARM/CMSIS/5.9.0/CMSIS/Documentation/Core/html/index.html
+        - file: ${CMSIS_PACK_ROOT}/ARM/CMSIS/6.1.0/CMSIS/Documentation/html/Core/index.html
           category: doc
-          version: 5.6.0
+          version: 6.1.0
+    - component: ARM::CMSIS:OS Tick:SysTick@1.0.5
+      condition: OS Tick SysTick
+      from-pack: ARM::CMSIS@6.1.0
+      selected-by: CMSIS:OS Tick:SysTick
+      implements: CMSIS:OS Tick@1.0.1
+      files:
+        - file: ${CMSIS_PACK_ROOT}/ARM/CMSIS/6.1.0/CMSIS/RTOS2/Source/os_systick.c
+          category: sourceC
+          version: 1.0.5
+    - component: ARM::CMSIS:RTOS2:FreeRTOS&Cortex-M@11.1.0
+      condition: CMSIS RTOS2 FreeRTOS CortexM
+      from-pack: ARM::CMSIS-FreeRTOS@11.1.0
+      selected-by: ARM::CMSIS:RTOS2:FreeRTOS&Cortex-M
+      implements: CMSIS:RTOS2@2.3.0
+      files:
+        - file: ${CMSIS_PACK_ROOT}/ARM/CMSIS-FreeRTOS/11.1.0/CMSIS/RTOS2/FreeRTOS/Include/freertos_mpool.h
+          category: header
+          version: 11.1.0
+        - file: ${CMSIS_PACK_ROOT}/ARM/CMSIS-FreeRTOS/11.1.0/CMSIS/RTOS2/FreeRTOS/Source/clib_os.c
+          category: source
+          version: 11.1.0
+        - file: ${CMSIS_PACK_ROOT}/ARM/CMSIS-FreeRTOS/11.1.0/CMSIS/RTOS2/FreeRTOS/Source/cmsis_os2.c
+          category: source
+          version: 11.1.0
+        - file: ${CMSIS_PACK_ROOT}/ARM/CMSIS-FreeRTOS/11.1.0/Documentation/html/index.html
+          category: doc
+          version: 11.1.0
+    - component: ARM::RTOS&FreeRTOS:Config&CMSIS RTOS2@11.1.0
+      condition: FreeRTOS Config CMSIS RTOS2
+      from-pack: ARM::CMSIS-FreeRTOS@11.1.0
+      selected-by: ARM::RTOS&FreeRTOS:Config&CMSIS RTOS2
+      files:
+        - file: ${CMSIS_PACK_ROOT}/ARM/CMSIS-FreeRTOS/11.1.0/Documentation/html/cre_freertos_proj.html#cmsis_freertos_config
+          category: doc
+          version: 11.1.0
+        - file: RTE/RTOS/FreeRTOSConfig.h
+          category: header
+          attr: config
+          version: 10.6.0
+    - component: ARM::RTOS&FreeRTOS:Core&Cortex-M@11.1.0
+      condition: FreeRTOS Core CM
+      from-pack: ARM::CMSIS-FreeRTOS@11.1.0
+      selected-by: ARM::RTOS&FreeRTOS:Core&Cortex-M
+      files:
+        - file: ${CMSIS_PACK_ROOT}/ARM/CMSIS-FreeRTOS/11.1.0/CMSIS/RTOS2/FreeRTOS/FreeRTOS.scvd
+          category: other
+          version: 11.1.0
+        - file: ${CMSIS_PACK_ROOT}/ARM/CMSIS-FreeRTOS/11.1.0/CMSIS/RTOS2/FreeRTOS/Include
+          category: include
+          version: 11.1.0
+        - file: ${CMSIS_PACK_ROOT}/ARM/CMSIS-FreeRTOS/11.1.0/CMSIS/RTOS2/FreeRTOS/Source/freertos_evr.c
+          category: source
+          version: 11.1.0
+        - file: ${CMSIS_PACK_ROOT}/ARM/CMSIS-FreeRTOS/11.1.0/Source/include
+          category: include
+          version: 11.1.0
+        - file: ${CMSIS_PACK_ROOT}/ARM/CMSIS-FreeRTOS/11.1.0/Source/include/FreeRTOS.h
+          category: header
+          version: 11.1.0
+        - file: ${CMSIS_PACK_ROOT}/ARM/CMSIS-FreeRTOS/11.1.0/Source/include/queue.h
+          category: header
+          version: 11.1.0
+        - file: ${CMSIS_PACK_ROOT}/ARM/CMSIS-FreeRTOS/11.1.0/Source/include/semphr.h
+          category: header
+          version: 11.1.0
+        - file: ${CMSIS_PACK_ROOT}/ARM/CMSIS-FreeRTOS/11.1.0/Source/include/task.h
+          category: header
+          version: 11.1.0
+        - file: ${CMSIS_PACK_ROOT}/ARM/CMSIS-FreeRTOS/11.1.0/Source/list.c
+          category: source
+          version: 11.1.0
+        - file: ${CMSIS_PACK_ROOT}/ARM/CMSIS-FreeRTOS/11.1.0/Source/portable/GCC/ARM_CM7/r0p1
+          category: include
+          version: 11.1.0
+        - file: ${CMSIS_PACK_ROOT}/ARM/CMSIS-FreeRTOS/11.1.0/Source/portable/GCC/ARM_CM7/r0p1/port.c
+          category: source
+          version: 11.1.0
+        - file: ${CMSIS_PACK_ROOT}/ARM/CMSIS-FreeRTOS/11.1.0/Source/queue.c
+          category: source
+          version: 11.1.0
+        - file: ${CMSIS_PACK_ROOT}/ARM/CMSIS-FreeRTOS/11.1.0/Source/tasks.c
+          category: source
+          version: 11.1.0
+    - component: ARM::RTOS&FreeRTOS:Event Groups@11.1.0
+      condition: FreeRTOS Event Groups
+      from-pack: ARM::CMSIS-FreeRTOS@11.1.0
+      selected-by: ARM::RTOS&FreeRTOS:Event Groups
+      files:
+        - file: ${CMSIS_PACK_ROOT}/ARM/CMSIS-FreeRTOS/11.1.0/Source/event_groups.c
+          category: source
+          version: 11.1.0
+        - file: ${CMSIS_PACK_ROOT}/ARM/CMSIS-FreeRTOS/11.1.0/Source/include/event_groups.h
+          category: header
+          version: 11.1.0
+    - component: ARM::RTOS&FreeRTOS:Heap&Heap_4@11.1.0
+      condition: FreeRTOS Heap
+      from-pack: ARM::CMSIS-FreeRTOS@11.1.0
+      selected-by: ARM::RTOS&FreeRTOS:Heap&Heap_4
+      files:
+        - file: ${CMSIS_PACK_ROOT}/ARM/CMSIS-FreeRTOS/11.1.0/Source/portable/MemMang/heap_4.c
+          category: source
+          version: 11.1.0
+        - file: http://www.freertos.org/a00111.html
+          category: doc
+          version: 11.1.0
+    - component: ARM::RTOS&FreeRTOS:Timers@11.1.0
+      condition: FreeRTOS Timers
+      from-pack: ARM::CMSIS-FreeRTOS@11.1.0
+      selected-by: ARM::RTOS&FreeRTOS:Timers
+      files:
+        - file: ${CMSIS_PACK_ROOT}/ARM/CMSIS-FreeRTOS/11.1.0/Source/include/timers.h
+          category: header
+          version: 11.1.0
+        - file: ${CMSIS_PACK_ROOT}/ARM/CMSIS-FreeRTOS/11.1.0/Source/timers.c
+          category: source
+          version: 11.1.0
+    - component: Microchip::Device:Startup@4.10.0
+      condition: ATSAMV71Q21B
+      from-pack: Microchip::SAMV71_DFP@4.10.230
+      selected-by: Device:Startup
+      files:
+        - file: ${CMSIS_PACK_ROOT}/Microchip/SAMV71_DFP/4.10.230/samv71b/include
+          category: include
+          version: 4.10.0
+        - file: ${CMSIS_PACK_ROOT}/Microchip/SAMV71_DFP/4.10.230/samv71b/include/sam.h
+          category: header
+          version: 4.10.0
+        - file: ${CMSIS_PACK_ROOT}/Microchip/SAMV71_DFP/4.10.230/samv71b/templates/library.c
+          category: source
+          attr: template
+          version: 4.10.0
+          select: Main file (.c)
+        - file: ${CMSIS_PACK_ROOT}/Microchip/SAMV71_DFP/4.10.230/samv71b/templates/library.cpp
+          category: source
+          attr: template
+          version: 4.10.0
+          select: Main file (.cpp)
+        - file: ${CMSIS_PACK_ROOT}/Microchip/SAMV71_DFP/4.10.230/samv71b/templates/main.c
+          category: source
+          attr: template
+          version: 4.10.0
+          select: Main file (.c)
+        - file: ${CMSIS_PACK_ROOT}/Microchip/SAMV71_DFP/4.10.230/samv71b/templates/main.cpp
+          category: source
+          attr: template
+          version: 4.10.0
+          select: Main file (.cpp)
+        - file: RTE/Device/ATSAMV71Q21B/samv71q21b_flash.ld
+          category: linkerScript
+          attr: config
+          version: 4.10.0
+        - file: RTE/Device/ATSAMV71Q21B/samv71q21b_sram.ld
+          category: other
+          attr: config
+          version: 4.10.0
+        - file: RTE/Device/ATSAMV71Q21B/startup_samv71q21b.c
+          category: source
+          attr: config
+          version: 4.10.0
+        - file: RTE/Device/ATSAMV71Q21B/system_samv71q21b.c
+          category: source
+          attr: config
+          version: 4.10.0
+  apis:
+    - api: CMSIS:OS Tick@1.0.1
+      from-pack: ARM::CMSIS@6.1.0
+      implemented-by: ARM::CMSIS:OS Tick:SysTick@1.0.5
+      files:
+        - file: ${CMSIS_PACK_ROOT}/ARM/CMSIS/6.1.0/CMSIS/RTOS2/Include/os_tick.h
+          category: header
+          version: 1.0.1
+    - api: CMSIS:RTOS2@2.3.0
+      from-pack: ARM::CMSIS@6.1.0
+      implemented-by: ARM::CMSIS:RTOS2:FreeRTOS&Cortex-M@11.1.0
+      files:
+        - file: ${CMSIS_PACK_ROOT}/ARM/CMSIS/6.1.0/CMSIS/Documentation/html/RTOS2/index.html
+          category: doc
+          version: 2.3.0
+        - file: ${CMSIS_PACK_ROOT}/ARM/CMSIS/6.1.0/CMSIS/RTOS2/Include/cmsis_os2.h
+          category: header
+          version: 2.3.0
   linker:
-    script: RTE/Device/ATSAMV71Q21B/gcc_linker_script.ld.src
-    regions: RTE/Device/ATSAMV71Q21B/regions_ATSAMV71Q21B.h
+    script: RTE/Device/ATSAMV71Q21B/samv71q21b_flash.ld
   groups:
     - group: Source Files
       files:
@@ -112,9 +304,31 @@ build:
   licenses:
     - license: <unknown>
       packs:
-        - pack: ARM::CMSIS@5.9.0
-      components:
-        - component: ARM::CMSIS:CORE@5.6.0
-    - license: <unknown>
-      packs:
         - pack: Microchip::SAMV71_DFP@4.10.230
+      components:
+        - component: Microchip::Device:Startup@4.10.0
+    - license: Apache-2.0
+      packs:
+        - pack: ARM::CMSIS-FreeRTOS@11.1.0
+        - pack: ARM::CMSIS@6.1.0
+      components:
+        - component: ARM::CMSIS:CORE@6.1.0
+        - component: ARM::CMSIS:OS Tick:SysTick@1.0.5
+        - component: ARM::CMSIS:RTOS2:FreeRTOS&Cortex-M@11.1.0
+        - component: ARM::RTOS&FreeRTOS:Config&CMSIS RTOS2@11.1.0
+        - component: ARM::RTOS&FreeRTOS:Core&Cortex-M@11.1.0
+        - component: ARM::RTOS&FreeRTOS:Event Groups@11.1.0
+        - component: ARM::RTOS&FreeRTOS:Heap&Heap_4@11.1.0
+        - component: ARM::RTOS&FreeRTOS:Timers@11.1.0
+        - component: CMSIS:OS Tick(API)
+        - component: CMSIS:RTOS2(API)
+    - license: MIT
+      packs:
+        - pack: ARM::CMSIS-FreeRTOS@11.1.0
+      components:
+        - component: ARM::CMSIS:RTOS2:FreeRTOS&Cortex-M@11.1.0
+        - component: ARM::RTOS&FreeRTOS:Config&CMSIS RTOS2@11.1.0
+        - component: ARM::RTOS&FreeRTOS:Core&Cortex-M@11.1.0
+        - component: ARM::RTOS&FreeRTOS:Event Groups@11.1.0
+        - component: ARM::RTOS&FreeRTOS:Heap&Heap_4@11.1.0
+        - component: ARM::RTOS&FreeRTOS:Timers@11.1.0
