--- a/fprime-cmsis/cmake/toolchain/support/sources/samv71q21b/blinky.cproject.yml
+++ b/fprime-cmsis/cmake/toolchain/support/sources/samv71q21b/blinky.cproject.yml
@@ -1,6 +1,13 @@
 project:
-  description: Blinking LED application for SAMV71 Xplained board.
   compiler: GCC
+  # NOTE an alternative method for passing flags on a per project basis
+  # misc:
+  #   - for-compiler: GCC
+  #     Link:
+  #       - -specs=nosys.specs
+
+  description: Blinking LED application for SAMV71 Xplained board.
+
   packs:
     - pack: Microchip::SAMV71_DFP@4.10.230
     # - pack: Keil::MDK-Middleware@7.16.0
@@ -12,13 +19,14 @@ project:
     - pack: ARM::CMSIS-FreeRTOS@11.1.0
 
   components:
+    - component: Microchip::Device:Startup
     - component: CMSIS:CORE                      # CMSIS Core component
     - component: CMSIS:OS Tick:SysTick
-    # - component: CMSIS:RTOS2:Keil RTX5&Source
-    # - component: Device:PIN
-
+    # NOTE we shouldnt actually need these since we pass -specs=nosys.specs
+    # but other wise we get linker errors about _close_r and nano
+    - component: CMSIS-Compiler:CORE
+    - component: CMSIS-Compiler:OS Interface:CMSIS-RTOS2
     - component: ARM::CMSIS Driver:GPIO:Custom
-    - component: Microchip::Device:Startup
     - component: ARM::CMSIS:RTOS2:FreeRTOS&Cortex-M
     - component: ARM::RTOS&FreeRTOS:Config&CMSIS RTOS2
     - component: ARM::RTOS&FreeRTOS:Core&Cortex-M
